continue migrating to java9